--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.6",
-        "@vitejs/plugin-vue": "^4.2.3"
+        "@vitejs/plugin-vue": "^4.2.3",
+        "flowbite": "^1.6.6"
     }
 }
