--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.0.6",
         "@vitejs/plugin-vue": "^4.2.3",
-        "flowbite": "^1.6.6"
+        "aos": "^2.3.4",
+        "flowbite": "^1.6.6",
+        "taos": "^1.0.3"
     }
 }
